[package]
name = "artgit"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
sha2 = "0.10"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"

[features]
default = []
tui = ["ratatui", "crossterm"]

[dependencies.ratatui]
version = "0.29"
optional = true

[dependencies.crossterm]
version = "0.28"
optional = true
